5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1753_1521.log
== TEST (2019-05-16 19:13:33) 
-- CODE:
capacidade N= input(float("digite a quantidade: "))
estoque inicial=input(float("digite a quantidade: "))
quantidade Q= input(float(""))


-- ERROR:
File "XXXX", line 1
    capacidade N= input(float("digite a quantidade: "))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:24:10) 
-- CODE:
capacidade N= input(float("digite a quantidade: "))
estoque inicial=input(float("digite a quantidade: "))
quantidade Q= input(float("valor total"))
print(float("capacidade N*estoque inicial/quantidade"))


-- ERROR:
File "XXXX", line 1
    capacidade N= input(float("digite a quantidade: "))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:24:16) 
-- CODE:
capacidade N= input(float("digite a quantidade: "))
estoque inicial=input(float("digite a quantidade: "))
quantidade Q= input(float("valor total"))
print(float("capacidade N*estoque inicial/quantidade"))


-- ERROR:
File "XXXX", line 1
    capacidade N= input(float("digite a quantidade: "))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:24:17) 
-- CODE:
capacidade N= input(float("digite a quantidade: "))
estoque inicial=input(float("digite a quantidade: "))
quantidade Q= input(float("valor total"))
print(float("capacidade N*estoque inicial/quantidade"))


-- ERROR:
File "XXXX", line 1
    capacidade N= input(float("digite a quantidade: "))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:06) 
-- CODE:
capacidade N= input(float("digite a quantidade: "))
estoque inicial=input(float("digite a quantidade: "))
quantidade Q= input(float("valor total"))



-- ERROR:
File "XXXX", line 1
    capacidade N= input(float("digite a quantidade: "))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:03) 
-- CODE:
capacidade N= input(float("digite a quantidade: "))
estoque inicial=input(float("digite a quantidade: "))
quantidade Q= input(float("valor total"))



-- ERROR:
File "XXXX", line 1
    capacidade N= input(float("digite a quantidade: "))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
